# movie_booking_system

./: .dockerignore  .gitignore  BUILD.bazel  MODULE.bazel  docker-compose.yml  pants.toml  requirements.txt
auth_service/: Dockerfile  database.py  main.py
auth_service/models/: user.py
auth_service/tests/: test_auth.py
catalog_service/: main.py
catalog_service/models/: auditorium.py  seat.py
catalog_service/routers/: auditorium.py  seat.py  showtime.py
catalog_service/schemas/: auditorium.py  seat.py  showtime.py
common/: BUILD.bazel  cache.py  config_reader.py  database.py  iam.py  requirements.txt  vault_client.py
ml/: requirements.txt
ml/dynamic_pricing_model/: Dockerfile  data_processing.py  model.py  train.py
ml/dynamic_pricing_model/configs/: config.yaml
ml/dynamic_pricing_model/data/: datav1.csv
movie_service/: Dockerfile  main.py
movie_service/models/: __init__.py  movies.py  showtimes.py
movie_service/routes/: genre.py  movie.py  showtime.py
movie_service/schemas/: genre.py  showtime.py
movie_service/services/: genre.py  movie.py  showtime.py
movie_service/tests/: conftest.py  test_movie.py  test_showtime.py
services/auth_service/: BUILD.bazel  Dockerfile  main.py  requirements.txt  security.py  services.py
services/auth_service/models/: user.py
services/auth_service/schemas/: user.py
services/auth_service/tests/: test_auth.py
services/auth_service/utillity/: seed_admin.py
services/catalog_service/: Dockerfile  database.py  requirements.txt
services/catalog_service/models/: showtime.py
services/catalog_service/routers/: auditorium.py  seat.py  showtime.py
services/catalog_service/services/: auditorium.py  seat.py  showtime.py
services/catalog_service/utility/: api_admin.py
services/inference_service/: Dockerfile  main.py  requirements.txt
services/movie_service/: BUILD.bazel  Dockerfile  main.py
services/movie_service/models/: genres.py
services/movie_service/schemas/: movie.py
services/movie_service/services/: movie.py
services/movie_service/tests/: conftest.py  run_tests.py  test_genre.py
services/reservations_service/: Dockerfile  database.py  main.py
sql/: auth_service_schema.sql  catalog_service_schema.sql  movie_service_schema.sql  reservations.sql
workflows/: dynamic_pricing_workflow.yaml
(+8 files in other folders)
