load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "movie_lib",
    srcs = glob(
        ["*.py"],
        exclude = ["main.py"],
    ) + glob([
        "models/*.py",
        "schemas/*.py",
        "routes/*.py",
        "services/*.py"
    ]),
    deps = [
        "//common:common_lib",
        "@pypi//pydantic",
    ],
)

py_binary(
    name = "movie_main",
    srcs = ["main.py"],
    main = "main.py",
    deps = [":movie_lib"],
    imports = ["."],
)

py_test(
    name = "movie_tests",
    srcs = glob(["tests/*.py"]),
    main="tests/run_tests.py",
    deps = [
        ":movie_lib",
        "@pypi//httpx",
        "@pypi//pytest",
        "@pypi//testcontainers",
    ],
)

